src/test/rustdoc-ui/private-item-doc-test.stderr
error: Documentation test in private item
  --> $DIR/private-item-doc-test.rs:4:5
   |
LL | /     /// private doc test
LL | |     ///
LL | |     /// ```
LL | |     /// assert!(false);
LL | |     /// ```
   | |___________^
   |
note: lint level defined here
  --> $DIR/private-item-doc-test.rs:1:9
   |
LL | #![deny(private_doc_tests)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

